--- a/webpros/webpros_inside/style1.css
+++ b/webpros/webpros_inside/style1.css
@@ -24,7 +24,7 @@ body{
     height: 1400px;
     background-color: white;
     position: relative;
-    top: 1px;
+    top: -20px;
     right:505px;
     border: 1px solid rgb(82,163,239)ue;
 }
@@ -33,33 +33,37 @@ body{
     font-family: sans-serif;
     font-size:smaller;
     position: relative;
-    top: 10px;
+    top: 11px;
     font-weight:lighter;
+    text-align:center;
 }
-.innerdiv1_3_1{
-    width: 183px;
-    height: 590px;
-    border: 1px solid rgb(153,204,255);
-    position: relative;
-    left:3px;
+.dotted_line{
+    border-bottom:dashed 1px;
+    height:1px;	
 }
-.innerdiv1_3_2{
-    width:183px;
-    height:40px;
-    background-color:rgb(77,130,210);
-    position: inherit;
-    top: -23px;
-    left: 0px;
+a{		
+    text-decoration:none;
+    font-family:sans-serif;
+    font-size:11px;
+    color: rgb(0,0,255);
+}
+.data{
+    height:-3px;
 }
 table{
-    width: 183px;
-    height:552px;
-    border: 1px solid black;
-    position: inherit;
-    top:-23px;
+    width:180px;
+    height:1000px; 
+    border:1px solid balck;
 }
-.ref_link{
-    text-decoration: none;
-    font-size: small;
-    font-weight: lighter;
+table{
+    border: 1px solid blue;
+    position: inherit;
+    left:4px;
+}
+.innerdiv1_3_1{
+    width:180px;
+    height:38px;
+    background-color:rgb(77,130,210);
+    position: relative;
+    left:4px;
 }
